# perplexity_mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
api/perplexity_mcp/: __main__.py  http_server.py  logger.py  server.py  types.py  validation.py
perplexity_mcp/: http_server.py
