[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-mcp-server"
version = "0.9.0"
description = "Python port of the official Perplexity API Platform MCP Server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",           # Model Context Protocol Python SDK
    "httpx>=0.27.0",        # HTTP client (replaces axios + undici)
    "pydantic>=2.0",        # Validation (replaces zod)
    "fastapi>=0.110.0",     # HTTP server (replaces express)
    "uvicorn[standard]>=0.29.0",  # ASGI server
    "python-dotenv>=1.0.0", # Load environment variables
]

[project.scripts]
perplexity-mcp = "perplexity_mcp.__main__:main"
perplexity-mcp-http = "perplexity_mcp.http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["perplexity_mcp"]
